--- a/Events.API/appsettings.json
+++ b/Events.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=db_Event;Persist Security Info=True;MultipleActiveResultSets=True;Trusted_Connection=True;Connection Timeout=30;"
+  }
 }
