--- a/Events.API/Events.API.csproj
+++ b/Events.API/Events.API.csproj
@@ -5,6 +5,10 @@
     <UserSecretsId>8f3d4f92-0509-4141-a672-daf94e299804</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>\Events.API\Events.API.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
